start is working now

--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earth Orbit</title>
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-    <div class="stars"></div>
-<!-- Right below is an image of the sun -->
-<div id="sun"></div>
-  <!-- Insert the 'earth' on the next line -->
-   <div id="earth-orbit">
-     <div id="earth"></div>
-       <div id="moon-orbit">
-         <div id="moon"></div>
-         </div>
-   </div>
+    
+  <div class="stars"></div>
+  <!-- Right below is an image of the sun -->
+  <div id="sun"></div>
+    <!-- Insert the 'earth' on the next line -->
+     <div id="earth-orbit">
+       <div id="earth"></div>
+         <div id="moon-orbit">
+           <div id="moon"></div>
+           </div>
+     </div>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <script src="Script.js"></script>
 </body>
-<script src="Script.js"></script>
 </html>
